[workspace]
resolver = "2"

members = [ 
    "packages/ffav", 
    "packages/ffav-format",
    "packages/ffav-codec",
    "packages/ffav-util", 
    "packages/ffav-types", 
]

[workspace.dependencies]
ffav = { path = "packages/ffav" }
ffav-format = { path = "packages/ffav-format" }
ffav-codec = { path = "packages/ffav-codec" }
ffav-util = { path = "packages/ffav-util" }
ffav-types = { path = "packages/ffav-types" }

bitflags = "2.9.1"
strum = "0.27"
strum_macros = "0.27"
bytes = "1.10.1"
clap = { version = "4.5.4", features = ["derive"] }

