[workspace]
resolver = "2"

members = [ 
    "packages/ffav", 
    "packages/ffav-pipeline", 
    "packages/ffav-utils", 
    "packages/ffav-types", 
    "packages/ffav-demux", 
    "packages/ffav-mux", 
    "packages/ffav-decode", 
    "packages/ffav-encode", 
    "packages/ffav-filter",
]

[workspace.dependencies]
ffav = { path = "packages/ffav" }
ffav-pipeline = { path = "packages/ffav-pipeline" }
ffav-demux = { path = "packages/ffav-demux"}
ffav-mux = { path = "packages/ffav-mux"}
ffav-decode = { path = "packages/ffav-decode" }
ffav-encode = { path = "packages/ffav-encode" }
ffav-filter ={ path = "packages/ffav-filter" }
ffav-utils = { path = "packages/ffav-utils" }
ffav-types = { path = "packages/ffav-types" }

bitflags = "2.9.1"
strum = "0.27"
strum_macros = "0.27"
bytes = "1.10.1"
clap = { version = "4.5.4", features = ["derive"] }
arc-slice = "0.1.0"
env_logger = "0.11.8"
thiserror = { version = "2.0.12" }
inventory = "0.3.20"

